--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>sumhUtil</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>top.sumhzehn</groupId>
+    <artifactId>sumhutil</artifactId>
+    <version>1.0</version>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
