--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- POI操作word, excel -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
@@ -24,15 +25,69 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <!-- JSON转换  -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.13.0</version>
         </dependency>
+        <!-- HTTP请求方案 -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
+        </dependency>
+        <!-- mysql -->
+        <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.17</version>
+			<exclusions>
+	          <exclusion>
+	            <artifactId>protobuf-java</artifactId>
+	            <groupId>com.google.protobuf</groupId>
+	          </exclusion>
+	        </exclusions>
+		</dependency>
+        <!-- mybaties 数据库转换实体类  -->
+        <dependency>
+	    	<groupId>org.mybatis.generator</groupId>
+	    	<artifactId>mybatis-generator-core</artifactId>
+	    	<version>1.3.7</version>
+	    	<scope>compile</scope>
+	    	<optional>true</optional>
+	    </dependency>
+	    <!--pagehelper 分页插件 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.12</version>
+		</dependency>
+        <!--通用mapper JAR冲突的临时解决方案 -->
+		<dependency>
+        	<groupId>tk.mybatis</groupId>
+            <artifactId>mapper-core</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-base</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-weekend</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring</artifactId>
+            <version>1.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-extra</artifactId>
+            <version>1.1.5</version>
         </dependency>
     </dependencies>
 
